Fix reCAPTCHA badge visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,4 +5,5 @@
 .grecaptcha-badge { 
   visibility: visible !important;
   z-index: 2147483647 !important; /* Max integer value to sit on top of everything */
+  position: fixed !important;
 }
